basic-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    name: my-service
spec:
  type: ClusterIP
  ports:
  - name: my-port
    protocol: TCP
    port: 9999
    targetPort: 9999
  selector:
    name: my-pod-label
